# HeartRateDetection

./: .gitattributes  README.md  build.gradle  test.txt
app/: CMakeLists.txt  build.gradle  local.properties
app/gradle/wrapper/: gradle-wrapper.properties
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: HRD.cpp  native-lib.cpp  snprintf.cpp  transCodec.cpp
app/src/main/cpp/include/: HRD.h  snprintf.h
app/src/main/java/com/example/heartratedect/: CameraProgressBar.java  CommonUtils.java  CustomProgressDialog.java  FormatUtil.java  MainActivity.java  MySurfaceView.java  myApplication.java
app/src/main/java/com/example/heartratedect/Activity/: AboutUsActivity.java  BaseActivity.java  CameraActivity.java  HistoryActivity.java  LoginActivity.java  RegistActivity.java  ResultActivity.java  Tab_Data_Fragment.java  Tab_Date_Fragment.java  Tab_Setting_Fragment.java  TuCaoActivity.java
app/src/main/java/com/example/heartratedect/Model/: Comment.java  Phrase.java  itemModel.java
app/src/main/java/com/example/heartratedect/Web/: IsUsernameExit.java  LoginJudge.java
app/src/main/jniLibs/armeabi-v7a/pkgconfig/: libavcodec.pc  libavformat.pc  libavutil.pc  libswresample.pc
app/src/main/jniLibs/armeabi/pkgconfig/: libavfilter.pc  libswscale.pc
app/src/main/res/anim/: refresh_anim.xml
app/src/main/res/layout/: aboutus.xml  activity_camera.xml  activity_history.xml  activity_main.xml  activity_result.xml  tab_data.xml  tab_date.xml  tab_setting.xml
app/src/main/res/layout-1280x720/: activity_camera.xml  activity_result.xml  login.xml  regist.xml  tab_data.xml
app/src/main/res/layout-1920x1080/: activity_main.xml  activity_result.xml
app/src/main/res/layout-2244x1080/: activity_camera.xml  activity_history.xml  login.xml  progress_dialog.xml  regist.xml  tab_data.xml  tucao.xml
gradle/wrapper/: gradle-wrapper.properties
